# document-assistant

./: README.md  document.db  main.py  pyproject.toml
agent/: filters_generate_agent.py  metadata_summary_agent.py  simple_query_agent.py  workflow_selection_agent.py
api/: classification.py  documents.py  query.py
chroma_db/7603d121-7727-4e9b-92ac-e5c974eecb4c/: index_metadata.pickle
schemas/: agent_response.py  agent_schemas.py  response.py  workflow_mapping.py
tools/: simple_query.py
utils/: db_helper.py  document_embedding.py  document_query.py  logger.py  metadata_filters_handler.py
workflow/: document_metadata_retrieval_workflow.py  general_query_workflow.py  simple_query_workflow.py
workflow/events/: __init__.py
